--- a/css/layout.css
+++ b/css/layout.css
@@ -2,24 +2,48 @@ body, html {
   margin: 0px;
   padding: 0px; }
 
-.godfather {
-  height: 100vh;
-  width: 100%;
-  padding: 0px;
-  margin: 0px;
-  background-color: black; }
-
 video {
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  min-width: 100%;
+  min-width: 110%;
   min-height: 100%;
   width: auto;
   height: auto;
   background-size: cover;
   z-index: 1; }
+
+nav {
+  width: 100%;
+  position: absolute !important;
+  bottom: 0px !important;
+  z-index: 5;
+  margin-bottom: 0px !important;
+  padding: 10px 0; }
+  nav img {
+    float: left; }
+  nav ul {
+    list-style: none;
+    margin-left: 189px;
+    cursor: pointer; }
+    nav ul li {
+      float: left;
+      padding: 10px 20px;
+      text-align: center; }
+
+nav.fixed {
+  position: fixed !important;
+  top: 0px;
+  right: 0px;
+  left: 0px;
+  z-index: 999;
+  margin-top: 0px;
+  height: 80px; }
+
+.wrapper {
+  width: 1000px;
+  margin: 0px auto; }
 
 .video-overlay {
   position: fixed;
@@ -31,4 +55,66 @@ video {
   width: 100%;
   height: 100%;
   z-index: 2;
-  background-color: rgba(0, 0, 0, 0.4); }
+  background: url(../src/img/pattern.png) repeat; }
+
+.content-container {
+  position: relative;
+  z-index: 3; }
+
+.container-video {
+  height: 100vh;
+  width: 100%;
+  text-align: center;
+  color: white; }
+  .container-video img {
+    margin: 200px auto 0px;
+    width: 200px; }
+
+.container-other {
+  height: 20000px;
+  width: 100%;
+  background-color: gray; }
+
+.section-intro {
+  padding: 100px 0; }
+
+.animated {
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both; }
+
+@keyframes bounceIn {
+  from, 20%, 40%, 60%, 80%, to {
+    -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1); }
+
+  0% {
+    opacity: 0;
+    -webkit-transform: scale3d(0.3, 0.3, 0.3);
+    transform: scale3d(0.3, 0.3, 0.3); }
+
+  20% {
+    -webkit-transform: scale3d(1.1, 1.1, 1.1);
+    transform: scale3d(1.1, 1.1, 1.1); }
+
+  40% {
+    -webkit-transform: scale3d(0.9, 0.9, 0.9);
+    transform: scale3d(0.9, 0.9, 0.9); }
+
+  60% {
+    opacity: 1;
+    -webkit-transform: scale3d(1.03, 1.03, 1.03);
+    transform: scale3d(1.03, 1.03, 1.03); }
+
+  80% {
+    -webkit-transform: scale3d(0.97, 0.97, 0.97);
+    transform: scale3d(0.97, 0.97, 0.97); }
+
+  to {
+    opacity: 1;
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1); } }
+.bounceIn {
+  -webkit-animation-name: bounceIn;
+  animation-name: bounceIn; }
