--- a/css/layout.sass
+++ b/css/layout.sass
@@ -79,8 +79,21 @@ nav.fixed
   width: 100%
   background-color: grey
 
-.section-intro
+.section-intro, .section-lineup
   padding: 100px 0
+
+.section-lineup
+  background-color: #fff
+  // div
+  //   height: 250px
+  //   background-color: red
+
+.section-banner
+  background-image: url(../src/img/banner.jpg)
+  background-size: cover
+  height: 500px
+  cursor: pointer
+
 
 //animate.css
 
