--- a/css/style.sass
+++ b/css/style.sass
@@ -1,6 +1,7 @@
 nav
   background-color: rgba(255, 255, 255, 1)
   border-bottom: 1px solid #000
+  box-shadow: 0 19px 38px rgba(0,0,0,0.15), 0 15px 12px rgba(0,0,0,0.15)
   img
     height: 50px
   ul
@@ -27,5 +28,15 @@ nav
   background-size: cover
   .inner
     text-align: center
-    color: #fff
+    color: #333
     font-size: 20px
+    div
+      font-size: 40px
+      margin-bottom: 40px
+
+.gridster
+  ul
+    list-style: none
+    li
+      background-color: grey
+      cursor: pointer
