--- a/jade/index.jade
+++ b/jade/index.jade
@@ -69,6 +69,7 @@ html
                   img(src="src/img/artist/cas.jpg")
                 li(data-row='4', data-col='4', data-sizex='1', data-sizey='1')
                   img(src="src/img/artist/cro.jpg")
+            button + Mehr
         
         .section-banner
           .wrapper
