--- a/css/layout.sass
+++ b/css/layout.sass
@@ -21,7 +21,7 @@ nav
   bottom: 0px!important
   z-index: 5
   margin-bottom: 0px !important
-  padding: 10px 0
+  padding: 0px 0
   img
     float: left
   ul
@@ -29,7 +29,7 @@ nav
     margin-left: 189px
     li
       float: left
-      padding: 10px 20px
+      padding: 10px 19px
       text-align: center
     li:hover
     cursor: pointer
@@ -41,7 +41,8 @@ nav.fixed
   left: 0px
   z-index: 999
   margin-top: 0px
-  height: 80px
+  height: 60px
+  background-color: rgba(255, 255, 255, 0.9)
 
 
 .wrapper
@@ -67,11 +68,16 @@ nav.fixed
 .container-video
   height: 100vh
   width: 100%
-  // background-color: rgba(0, 0, 0, 0.4)
+  background-color: rgba(0, 0, 0, 0.2)
   text-align: center
   color: #fff
+  div
+    position: relative
+    top: 50%
+    left: 50%
+    transform: translate(-50%, -50%)
   img
-    margin: 200px auto 0px
+    margin: 0px auto 0px
     width: 200px
 
 .container-other
