--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,26 @@
 nav {
   background-color: white;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #000;
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.15), 0 15px 12px rgba(0, 0, 0, 0.15); }
   nav img {
-    height: 50px; }
+    height: 35px; }
   nav ul li {
-    font-size: 20px; }
+    font-size: 18px; }
+
+button {
+  background-color: rgba(255, 255, 255, 0);
+  border-radius: 5px;
+  border: 1px solid #000;
+  padding: 10px;
+  text-align: center; }
 
 .container-video h1 {
   font-size: 65px; }
 
 .btn-video {
   font-size: 20px;
-  color: white;
-  border: 1px solid white;
+  color: #fff;
+  border: 1px solid #fff;
   padding: 10px 10px;
   text-align: center;
   background: rgba(0, 0, 0, 0.5);
@@ -26,7 +33,7 @@ nav {
   background-size: cover; }
   .section-intro .inner {
     text-align: center;
-    color: #333333;
+    color: #333;
     font-size: 20px; }
     .section-intro .inner div {
       font-size: 40px;
@@ -35,5 +42,10 @@ nav {
 .gridster ul {
   list-style: none; }
   .gridster ul li {
-    background-color: gray;
+    background-color: grey;
     cursor: pointer; }
+
+.section-lineup {
+  text-align: center; }
+  .section-lineup button {
+    margin-top: 40px; }
