--- a/css/style.sass
+++ b/css/style.sass
@@ -3,10 +3,18 @@ nav
   border-bottom: 1px solid #000
   box-shadow: 0 19px 38px rgba(0,0,0,0.15), 0 15px 12px rgba(0,0,0,0.15)
   img
-    height: 50px
+    height: 35px
   ul
     li
-      font-size: 20px
+      font-size: 18px
+
+button
+  background-color: rgba(255, 255, 255, 0)
+  border-radius: 5px
+  border: 1px solid #000
+  padding: 10px
+  text-align: center
+
 
 .container-video
   h1
@@ -40,3 +48,8 @@ nav
     li
       background-color: grey
       cursor: pointer
+
+.section-lineup
+  text-align: center
+  button
+    margin-top: 40px
