--- a/css/layout.sass
+++ b/css/layout.sass
@@ -1,3 +1,5 @@
+$abigrey: #404041
+
 body, html
   margin: 0px
   padding: 0px
@@ -44,6 +46,10 @@ nav.fixed
   height: 60px
   background-color: rgba(255, 255, 255, 0.9)
 
+.video-box
+  margin: 0px auto
+  width: 700px
+
 
 .wrapper
   width: 1000px
@@ -61,6 +67,7 @@ nav.fixed
   z-index: 2
   background: url(../src/img/pattern.png) repeat
 
+
 .content-container
   position: relative
   z-index: 3
@@ -68,9 +75,10 @@ nav.fixed
 .container-video
   height: 100vh
   width: 100%
-  background-color: rgba(0, 0, 0, 0.2)
+  // background-color: rgba(0, 0, 0, 0.2)
   text-align: center
   color: #fff
+
   div
     position: relative
     top: 50%
@@ -81,11 +89,10 @@ nav.fixed
     width: 200px
 
 .container-other
-  height: 20000px
   width: 100%
   background-color: grey
 
-.section-intro, .section-lineup
+.section-intro, .section-lineup, .section-news, .section-video, .section-sponsors
   padding: 100px 0
 
 .section-lineup
@@ -99,7 +106,40 @@ nav.fixed
   background-size: cover
   height: 500px
   cursor: pointer
+  background-position-x: 0px
+  transition: all 40s
 
+.flow
+  background-position-x: -700px
+  transition: all 40s
+
+.section-news
+  .row
+    div
+      padding: 15px
+      .news-head
+        padding: 0px
+        height: 200px
+      .news-foot
+        text-align: center
+        font-size: 20px
+        background-color: #fff
+        height: 200px
+        padding: 20px
+        .box-text
+          height: 50%
+    // div:first-child
+    //   padding-left: 0px
+    // div:last-child
+    //   padding-right: 0px
+
+
+.footer
+  background-color: #75c2b2
+  .wrapper
+    background-image: url(src/img/footer.png)
+    background-size: cover
+    height: 500px
 
 //animate.css
 
