--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,13 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,700,900);
+* {
+  font-family: "Roboto", sans-serif; }
+
+h1, h2, h4 {
+  font-weight: 900 !important; }
+
 nav {
   background-color: white;
-  border-bottom: 1px solid #000;
-  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.15), 0 15px 12px rgba(0, 0, 0, 0.15); }
+  border-bottom: 1px solid black; }
   nav img {
     height: 35px; }
   nav ul li {
@@ -10,7 +16,7 @@ nav {
 button {
   background-color: rgba(255, 255, 255, 0);
   border-radius: 5px;
-  border: 1px solid #000;
+  border: 1px solid black;
   padding: 10px;
   text-align: center; }
 
@@ -19,22 +25,27 @@ button {
 
 .btn-video {
   font-size: 20px;
-  color: #fff;
-  border: 1px solid #fff;
+  color: black;
+  border: 0px solid rgba(255, 255, 255, 0.5);
   padding: 10px 10px;
   text-align: center;
-  background: rgba(0, 0, 0, 0.5);
-  border-radius: 5px;
+  background: rgba(255, 255, 255, 0.5);
+  border-radius: 0px;
   margin-top: 40px; }
 
 .section-intro {
   background-color: rgba(0, 0, 0, 0.6);
-  background-image: url(../src/img/bg-section.png);
-  background-size: cover; }
+  background-image: url(../src/img/abipic.jpg);
+  background-size: cover;
+  height: 100vh; }
   .section-intro .inner {
     text-align: center;
-    color: #333;
-    font-size: 20px; }
+    color: #333333;
+    font-size: 20px;
+    position: relative;
+    padding: 44% 0;
+    margin-top: -25%;
+    color: white; }
     .section-intro .inner div {
       font-size: 40px;
       margin-bottom: 40px; }
@@ -42,10 +53,86 @@ button {
 .gridster ul {
   list-style: none; }
   .gridster ul li {
-    background-color: grey;
+    background-color: gray;
     cursor: pointer; }
+  .gridster ul .overlay {
+    opacity: 0;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background: -moz-linear-gradient(top, transparent 0%, rgba(0, 0, 0, 0.65) 100%);
+    background: -webkit-linear-gradient(top, transparent 0%, rgba(0, 0, 0, 0.65) 100%);
+    background: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.65) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#a6000000',GradientType=0 );
+    transition: all 0.5s; }
+  .gridster ul .line-up-content {
+    position: absolute;
+    bottom: 0px;
+    color: white;
+    font-size: 24px;
+    padding-left: 20px;
+    padding-bottom: 20px; }
+
+.overlay-show {
+  opacity: 1 !important;
+  transition: all 0.5s; }
 
 .section-lineup {
   text-align: center; }
   .section-lineup button {
     margin-top: 40px; }
+
+.section-news {
+  background-color: #f4f4f4; }
+  .section-news .wrapper {
+    text-align: center; }
+    .section-news .wrapper h2 {
+      margin-bottom: 30px; }
+
+.section-video {
+  background-color: #f4f4f4; }
+  .section-video .wrapper {
+    text-align: center; }
+    .section-video .wrapper h2 {
+      margin-bottom: 30px; }
+
+.section-lineup h2 {
+  margin-bottom: 30px; }
+
+.section-sponsors {
+  background-color: white; }
+  .section-sponsors h2 {
+    margin-bottom: 30px;
+    text-align: center; }
+
+.btn-news {
+  width: 103px;
+  background-color: #83d3c2;
+  color: white;
+  padding: 6px !important;
+  font-weight: bolder;
+  margin: 20px auto;
+  text-align: center;
+  cursor: pointer;
+  transition: all 0.3s; }
+  .btn-news:hover {
+    background-color: #75c2b2;
+    transition: all 0.3s; }
+
+.news-head {
+  background-size: cover; }
+
+.btn {
+  width: 103px;
+  padding: 6px;
+  font-weight: bolder;
+  text-align: center;
+  font-size: 20px;
+  background-color: #83d3c2;
+  color: white;
+  margin: 40px auto;
+  cursor: pointer;
+  transition: all 0.3s; }
+  .btn:hover {
+    background-color: #75c2b2;
+    transition: all 0.3s; }
