--- a/css/style.sass
+++ b/css/style.sass
@@ -1,7 +1,15 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,700,900)
+*
+  font-family: 'Roboto', sans-serif
+
+h1,h2,h4
+  font-weight: 900!important
+
 nav
-  background-color: rgba(255, 255, 255, 1)
+  background-color: #fff
   border-bottom: 1px solid #000
-  box-shadow: 0 19px 38px rgba(0,0,0,0.15), 0 15px 12px rgba(0,0,0,0.15)
+  // box-shadow: 0 19px 38px rgba(0,0,0,0.15), 0 15px 12px rgba(0,0,0,0.15)
+  // color: #fff
   img
     height: 35px
   ul
@@ -22,22 +30,28 @@ button
 
 .btn-video
   font-size: 20px
-  color: #fff
-  border: 1px solid #fff
+  color: #000
+  border: 0px solid rgba(255, 255, 255, 0.5)
   padding: 10px 10px
   text-align: center
-  background: rgba(0, 0, 0, 0.5)
-  border-radius: 5px
+  background: rgba(255, 255, 255, 0.5)
+  border-radius: 0px
   margin-top: 40px
 
 .section-intro
   background-color: rgba(0, 0, 0, 0.6)
-  background-image: url(../src/img/bg-section.png)
+  background-image: url(../src/img/abipic.jpg)
   background-size: cover
+  height: 100vh
   .inner
     text-align: center
     color: #333
     font-size: 20px
+    position: relative
+    padding: 44% 0
+    margin-top: -25%
+    color: #fff
+
     div
       font-size: 40px
       margin-bottom: 40px
@@ -48,8 +62,88 @@ button
     li
       background-color: grey
       cursor: pointer
+    .overlay
+      opacity: 0
+      position: absolute
+      height: 100%
+      width: 100%
+      background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%)
+      background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%)
+      background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%)
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=0 )
+      transition: all 0.5s
+
+    .line-up-content
+      position: absolute
+      bottom: 0px
+      color: #ffffff
+      font-size: 24px
+      padding-left: 20px
+      padding-bottom: 20px
+
+.overlay-show
+  opacity: 1!important
+  transition: all 0.5s
 
 .section-lineup
   text-align: center
   button
     margin-top: 40px
+
+.section-news
+  background-color: #f4f4f4
+  .wrapper
+    text-align: center
+    h2
+      margin-bottom: 30px
+
+.section-video
+  background-color: #f4f4f4
+  .wrapper
+    text-align: center
+    h2
+      margin-bottom: 30px
+
+.section-lineup
+  .wrapper
+  h2
+    margin-bottom: 30px
+
+.section-sponsors
+  background-color: #fff
+  .wrapper
+  h2
+    margin-bottom: 30px
+    text-align: center
+
+.btn-news
+  width: 103px
+  background-color: #83D3C2
+  color: #ffffff
+  padding: 6px!important
+  font-weight: bolder
+  margin: 20px auto
+  text-align: center
+  cursor: pointer
+  transition: all 0.3s
+  &:hover
+    background-color: #75c2b2
+    transition: all 0.3s
+
+.news-head
+  background-size: cover
+
+.btn
+  width: 103px
+  padding: 6px
+  font-weight: bolder
+  text-align: center
+  font-size: 20px
+  background-color: #83D3C2
+  color: #fff
+  margin: 40px auto
+  cursor: pointer
+  transition: all 0.3s
+  &:hover
+    background-color: #75c2b2
+    transition: all 0.3s
