--- a/jade/index.jade
+++ b/jade/index.jade
@@ -48,31 +48,105 @@ html
             .gridster
               ul
                 li(data-row='1', data-col='1', data-sizex='1', data-sizey='1')
+                  .overlay
+                    .line-up-content Kollegah
                   img(src="src/img/artist/kolle.jpg")
                 li(data-row='2', data-col='1', data-sizex='1', data-sizey='2')
+                  .overlay
+                    .line-up-content Mac Miller
                   img(src="src/img/artist/mac.jpg")
                 li(data-row='3', data-col='1', data-sizex='2', data-sizey='1')
+                  .overlay
+                    .line-up-content Wiz Khalifa
                   img(src="src/img/artist/wiz.jpg")
                 li(data-row='3', data-col='1', data-sizex='1', data-sizey='1')
+                  .overlay
+                    .line-up-content Dajuan
                   img(src="src/img/artist/dajuan.jpg")
                 li(data-row='3', data-col='2', data-sizex='1', data-sizey='1')
+                  .overlay
+                    .line-up-content Weekend
                   img(src="src/img/artist/weekend.jpg")
                 li(data-row='1', data-col='2', data-sizex='2', data-sizey='1')
+                  .overlay
+                    .line-up-content Bronson
                   img(src="src/img/artist/bronson.jpg")
                 li(data-row='2', data-col='2', data-sizex='1', data-sizey='1')
+                  .overlay
+                    .line-up-content Miss Platnum
                   img(src="src/img/artist/miss.jpg")
                 li(data-row='1', data-col='4', data-sizex='1', data-sizey='2')
+                  .overlay
+                    .line-up-content Marteria
                   img(src="src/img/artist/marteria.jpg")
                 li(data-row='2', data-col='4', data-sizex='2', data-sizey='1')
+                  .overlay
+                    .line-up-content KIZ
                   img(src="src/img/artist/kiz.jpg")
                 li(data-row='3', data-col='4', data-sizex='1', data-sizey='1')
+                  .overlay
+                    .line-up-content Casper
                   img(src="src/img/artist/cas.jpg")
                 li(data-row='4', data-col='4', data-sizex='1', data-sizey='1')
+                  .overlay
+                    .line-up-content Cro
                   img(src="src/img/artist/cro.jpg")
-            button + Mehr
-        
+            .btn + Mehr
+            
+        .section-news
+          .wrapper
+            h2 News
+            .row
+              .col-md-4
+                .news-head(style='background-image: url(src/img/plakat.png)')
+                .news-foot
+                  .box-text 
+                    div Zelten auf dem Abifestival
+                  .box-btn
+                    .btn-news Mehr
+              .col-md-4
+                .news-head(style='background-image: url(src/img/plakat2.png)')
+                .news-foot
+                  .box-text 
+                    div Abifestival-App
+                  .box-btn
+                    .btn-news Mehr
+              .col-md-4
+                .news-head(style='background-image: url(src/img/plakat2.png)')
+                .news-foot
+                  .box-text 
+                    div Andere News
+                  .box-btn
+                    .btn-news Mehr
         .section-banner
           .wrapper
+          
+        .section-video
+          .wrapper
+            h2 Aftermovie 2015
+            .video-box
+              iframe(src='https://player.vimeo.com/video/136583980?byline=0', width='700', height='393', frameborder='0', webkitallowfullscreen='', mozallowfullscreen='', allowfullscreen='')
+          
+        .section-sponsors
+          .wrapper
+            .row
+              h2 Sponsoren
+              .col-md-4
+                img(src="src/img/sponsoren/1.png")
+              .col-md-4
+                img(src="src/img/sponsoren/2.png")
+              .col-md-4
+                img(src="src/img/sponsoren/3.png")
+              .col-md-4 
+                img(src="src/img/sponsoren/4.png")
+              .col-md-4
+                img(src="src/img/sponsoren/6.png")
+              .col-md-4 
+                img(src="src/img/sponsoren/5.png")
+        
+        //- .footer
+        //-   .wrapper
+        //-     h2 hallo
             
     
     script(src='js/jquery.min.js')
