--- a/css/layout.css
+++ b/css/layout.css
@@ -16,11 +16,10 @@ video {
 
 nav {
   width: 100%;
-  position: absolute !important;
-  bottom: 0px !important;
+  position: fixed !important;
   z-index: 5;
   margin-bottom: 0px !important;
-  padding: 0px 0; }
+  padding: 2px 0; }
   nav img {
     float: left; }
   nav ul {
@@ -61,6 +60,15 @@ nav.fixed {
   height: 100%;
   z-index: 2;
   background: url(../src/img/pattern.png) repeat; }
+
+.container-social {
+  width: 150px;
+  height: 50px;
+  background-color: red;
+  position: relative;
+  bottom: 0px;
+  right: 0px;
+  z-index: 6; }
 
 .content-container {
   position: relative;
