--- a/css/layout.sass
+++ b/css/layout.sass
@@ -19,11 +19,11 @@ video
 
 nav
   width: 100%
-  position: absolute!important
-  bottom: 0px!important
+  position: fixed!important
+  // bottom: 0px!important
   z-index: 5
   margin-bottom: 0px !important
-  padding: 0px 0
+  padding: 2px 0
   img
     float: left
   ul
@@ -66,6 +66,15 @@ nav.fixed
   height: 100%
   z-index: 2
   background: url(../src/img/pattern.png) repeat
+
+.container-social
+  width: 150px
+  height: 50px
+  background-color: red
+  position: relative
+  bottom: 0px
+  right: 0px
+  z-index: 6
 
 
 .content-container
