--- a/css/style.sass
+++ b/css/style.sass
@@ -40,9 +40,41 @@ button
 
 .section-intro
   background-color: rgba(0, 0, 0, 0.6)
-  background-image: url(../src/img/abipic.jpg)
+  background-image: url(../src/img/popo.jpg)
   background-size: cover
-  height: 100vh
+  // height: 50vh
+  -webkit-box-shadow: 0px 2px 57px 6px rgba(0,0,0,0.35)
+  -moz-box-shadow: 0px 2px 57px 6px rgba(0,0,0,0.35)
+  box-shadow: 0px 2px 57px 6px rgba(0,0,0,0.35)
+  .points
+    margin: 30px auto 0px
+    width: 44px
+  .left
+    height: 400px
+    border: 1px solid rgba(255, 255 , 255, 0.8)
+    border-right: 0px
+    padding: 20px
+    color: #fff
+    text-align: center
+    h3
+      margin-bottom: 50px
+    p
+      font-size: 16px
+      margin-bottom: 50px
+    .btn
+      background-color: rgba(255,255,255,0.2)
+      width: 189px
+      &:hover
+        background-color: rgba(255,255,255,0.5)
+  .row
+    margin: 0px
+  .right
+    height: 400px
+    border: 1px solid rgba(255, 255 , 255, 0.8)
+    border-left: 0px
+    padding: 20px
+    background-image: url(../src/img/boxbg.jpg)
+    background-size: cover
   .inner
     text-align: center
     color: #333
@@ -147,3 +179,44 @@ button
   &:hover
     background-color: #75c2b2
     transition: all 0.3s
+
+
+.section-begin
+  background-image: url(../src/img/popo.jpg)
+  background-size: cover
+  .wrapper
+    height: 300px
+
+
+.arrow
+  width: 50px
+  height: 100px
+  border: 3px solid #ffffff
+  position: absolute
+  background-image: url(../src/img/arrow.png)
+  background-repeat: no-repeat
+  background-position-y: 0px
+  cursor: pointer
+  border-radius: 10px
+  img
+    width: 100%!important
+
+
+.arrow-move
+  background-position-y: 92px
+  transition: all 0.2s
+
+@keyframes movingarrow
+  from
+    background-position-y: 0px
+  to
+    background-position-y: 92px
+
+#bindmovingarrow
+  animation-name: movingarrow
+  animation-duration: 1.6s
+  animation-iteration-count: infinite
+
+.fadeOut
+  opacity: 0
+  transition: all 0.5s
