mobilde detection + pic menu

--- a/css/layout.css
+++ b/css/layout.css
@@ -1,45 +1,53 @@
-body, html {
-  margin: 0px;
-  padding: 0px; }
-
-video {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  min-width: 110%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
-  background-size: cover;
-  z-index: 1; }
-
-nav {
-  width: 100%;
-  position: fixed !important;
+.nav {
   z-index: 5;
-  margin-bottom: 0px !important;
-  padding: 2px 0; }
-  nav img {
-    float: left; }
-  nav ul {
+  position: fixed;
+  background-color: white;
+  width: 100%;
+  padding: 0px; }
+  .nav nav {
+    margin: 0px auto;
+    width: 800px; }
+    @media screen and (max-width: 1200px) {
+      .nav nav {
+        width: 680px;
+        display: none; } }
+  .nav .img {
+    float: left;
+    position: absolute;
+    background-color: #dddddd;
+    z-index: 10;
+    margin-left: -153px;
+    transition: all 0.5s; }
+    .nav .img img {
+      position: absolute; }
+  .nav .img-show {
+    margin-left: 0px; }
+    @media screen and (max-width: 1040px) {
+      .nav .img-show {
+        margin-left: -153px; } }
+  .nav .social {
+    float: right; }
+  .nav ul {
     list-style: none;
-    margin-left: 189px;
-    cursor: pointer; }
-    nav ul li {
+    margin: 0px; }
+    .nav ul li {
       float: left;
-      padding: 10px 19px;
-      text-align: center; }
-
-nav.fixed {
-  position: fixed !important;
-  top: 0px;
-  right: 0px;
-  left: 0px;
-  z-index: 999;
-  margin-top: 0px;
-  height: 60px;
-  background-color: rgba(255, 255, 255, 0.9); }
+      padding: 10px 0;
+      text-align: center;
+      width: 14%; }
+    .nav ul li:hover {
+      cursor: pointer;
+      background-color: #77d3c2;
+      transition: background-color 0.3s;
+      color: white; }
+  .nav .social span {
+    padding: 12px 10px;
+    font-size: 20px;
+    cursor: pointer;
+    transition: all 0.2s; }
+  .nav .social span:hover {
+    color: #77d3c2;
+    transition: all 0.2s; }
 
 .video-box {
   margin: 0px auto;
@@ -89,14 +97,15 @@ nav.fixed {
     width: 200px; }
 
 .container-other {
-  width: 100%;
-  background-color: gray; }
+  background-image: url(../src/img/abibg.png);
+  background-size: cover;
+  background-attachment: fixed; }
 
 .section-intro, .section-lineup, .section-news, .section-video, .section-sponsors {
   padding: 100px 0; }
 
 .section-lineup {
-  background-color: white; }
+  background-color: #dddddd; }
 
 .section-banner {
   background-image: url(../src/img/banner.jpg);
