--- a/css/style.sass
+++ b/css/style.sass
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,700,900)
+
 *
   font-family: 'Roboto', sans-serif
 
@@ -7,7 +8,8 @@ h1,h2,h4
 
 nav
   background-color: #fff
-  border-bottom: 1px solid #000
+  padding: 0px
+  // border-bottom: 1px solid #000
   // box-shadow: 0 19px 38px rgba(0,0,0,0.15), 0 15px 12px rgba(0,0,0,0.15)
   // color: #fff
   img
@@ -22,6 +24,23 @@ button
   border: 1px solid #000
   padding: 10px
   text-align: center
+
+body, html
+  margin: 0px
+  padding: 0px
+
+
+video
+  position: fixed
+  top: 50%
+  left: 50%
+  transform: translate(-50%, -50%)
+  min-width: 110%
+  min-height: 100%
+  width: auto
+  height: auto
+  background-size: cover
+  z-index: 1
 
 
 .container-video
@@ -117,6 +136,30 @@ button
   opacity: 1!important
   transition: all 0.5s
 
+.section-sites
+  .row
+    margin-left: 0px
+    margin-right: 0px
+    div
+      padding: 0px
+  .menu-overlay
+    width: 100%
+    height: 100%
+    background-color: rgba(0,0,0,0.3)
+    opacity: 1
+    transition: all 0.3s
+    cursor: pointer
+    font-weight: 700
+    &:hover
+      opacity: 0
+      transition: all 0.3s
+  .menu-overlay-text
+    position: absolute
+    bottom: 0px
+    color: #ffffff
+    font-size: 18px
+    padding: 0 0 20px 20px!important
+
 .section-lineup
   text-align: center
   button
@@ -130,7 +173,7 @@ button
       margin-bottom: 30px
 
 .section-video
-  background-color: #f4f4f4
+  background-color: #ddd
   .wrapper
     text-align: center
     h2
@@ -142,7 +185,7 @@ button
     margin-bottom: 30px
 
 .section-sponsors
-  background-color: #fff
+  background-color: #f4f4f4
   .wrapper
   h2
     margin-bottom: 30px
@@ -187,7 +230,6 @@ button
   .wrapper
     height: 300px
 
-
 .arrow
   width: 50px
   height: 100px
@@ -209,13 +251,24 @@ button
 @keyframes movingarrow
   from
     background-position-y: 0px
+    -webkit-background-position-y: 0px
+    -moz-background-position-y: 0px
   to
     background-position-y: 92px
+    -webkit-background-position-y: 92px
+    -moz-background-position-y: 92px
 
 #bindmovingarrow
   animation-name: movingarrow
+  -webkit-animation-name: movingarrow
+  -moz-animation-name: movingarrow
   animation-duration: 1.6s
+  -webkit-duration: 1.6s
+  -moz-duration: 1.6s
   animation-iteration-count: infinite
+  -webkit-interation-count: infinite
+  -moz-interation-count: infinite
+
 
 .fadeOut
   opacity: 0
